--- a/writing/Revision_Clean/plos_ms_revision.tex
+++ b/writing/Revision_Clean/plos_ms_revision.tex
@@ -164,7 +164,7 @@
 \newline
 % Insert author names, affiliations and corresponding author email (do not include titles, positions, or degrees).
 \\
-Robert X.D. Hawkins\textsuperscript{12},
+Robert X.D. Hawkins\textsuperscript{1,2*},
 Robert L. Goldstone\textsuperscript{2},
 \\
 \bigskip
@@ -183,7 +183,7 @@ Robert L. Goldstone\textsuperscript{2},
 % Current address notes
 
 % Use the asterisk to denote corresponding authorship and provide email address in note below.
-* rxdh@stanford.edu
+* E-mail: rxdh@stanford.edu (RXDH)
 
 \end{flushleft}
 % Please keep the abstract below 300 words
@@ -193,7 +193,7 @@ Why are some behaviors governed by strong social conventions while others are no
 \linenumbers
 
 \section*{Introduction}
-Many everyday activities are governed by strong societal conventions: the side of the road we drive on, the meaning of ``red'' and ``green'' on traffic lights, the currency we use to pay for our coffee, and the way we greet the cashier \cite{ClarkWilkesGibbs86_ReferringCollaborative, GarrodAnderson87_SayingWhatYouMean, CaldwellSmith12_Conventions, CentolaBaronchelli15_ConventionEmergence}. These are all \emph{self-sustaining}, in the sense that we will continue to conform to the convention as long as we expect others to, and also \emph{arbitrary}, in the sense that at least one alternative regularity exists and would be equally acceptable as long as everyone coordinated on it \cite{Lewis69_Convention}.\footnote{Some of these behaviors have also come to be regulated by the \emph{law}, but this does not undermine their status as conventions. If we expected everyone to drive on the left, the cost of driving on the right (and crashing) would be much greater than the cost of following the convention (and breaking the law).} 
+Many everyday activities are governed by strong societal conventions: the side of the road we drive on, the meaning of ``red'' and ``green'' on traffic lights, the currency we use to pay for our coffee, and the way we greet the cashier \cite{ClarkWilkesGibbs86_ReferringCollaborative, GarrodAnderson87_SayingWhatYouMean, CaldwellSmith12_Conventions, CentolaBaronchelli15_ConventionEmergence}. These are all \emph{self-sustaining}, in the sense that we will continue to conform to the convention as long as we expect others to, and also \emph{arbitrary}, in the sense that at least one alternative regularity exists and would be equally acceptable as long as everyone coordinated on it \cite{Lewis69_Convention}.%\footnote{Some of these behaviors have also come to be regulated by the \emph{law}, but this does not undermine their status as conventions. If we expected everyone to drive on the left, the cost of driving on the right (and crashing) would be much greater than the cost of following the convention (and breaking the law).} 
 
 Equally interesting, however, are the many activities not governed by conventions. Consider a pedestrian deciding what path to take through a busy marketplace. There is still a coordination problem to solve -- we do not want to keep running into one another -- but we solve it `on the fly' every time and there is no mutual expectation of conformity. The spatiotemporal patterns formed by pedestrians are driven more by reactive or subconscious factors than strategic or conventional considerations \cite{HelbingBuznaWerner05_PedestrianCrowdDynamics}. Similarly, there are no societal conventions governing who gets the last bite of food at a meal or what kind of music to put on afterward. 
 
@@ -203,7 +203,7 @@ To formalize and investigate these intuitions in a more rigorous, concrete game 
 
 This game has several interesting properties. Like ``Battle of the Sexes,'' there are three Nash equilibria for the one-shot version of the game: two (unfair) pure strategies where one player always gets the good coffee and the other player always gets the bad coffee, and one (inefficient) mixed strategy where players randomly pick between the two shops with an optimal probability determined by how much better the good coffee is (see \nameref{S1_Text} for a formal proof). In the repeated version of the game, there are two additional equilibria that are both fair and efficient, but both require more sophisticated patterns of coordination across rounds. Thus, there is an inherent tension between fairness and efficiency that can only be systematically resolved by the spontaneous emergence of coordinated (meta-)cooperative game play, or in other words, through conventionalization. 
 
-One possible convention is an \emph{alternation} equilibrium: the two players take turns going to the better shop, so that they never run into each other and each get the good coffee equally often\cite{VanderschraafSkyrms03_LearningToTakeTurns, HelbingSchonhofStark05_EmpiricalTurnTaking, LauMui08_TurnTakingBattleOfTheSexes}. The other is a \emph{correlated} equilibrium: the players both follow a reliable public signal, such as the random assignment of the better coffee to different locations. If each person picks a unique location and goes there day after day, then in the long run, the random assignment process will give them the good coffee equally often\footnote{For the coffee shop example to work, suppose that the two shops are actually mobile carts that are randomly assigned to two locations each day.}  \cite{ Aumann74_CorrelativeEquilibria, GintisHelbing13_HomoSocialis}. Note that both fit the traditional definition of a convention according to Lewis \cite{Lewis69_Convention}, since neither convention is inherently preferable to the other, and neither player benefits from changing their behavior once the convention is established.
+One possible convention is an \emph{alternation} equilibrium: the two players take turns going to the better shop, so that they never run into each other and each get the good coffee equally often\cite{VanderschraafSkyrms03_LearningToTakeTurns, HelbingSchonhofStark05_EmpiricalTurnTaking, LauMui08_TurnTakingBattleOfTheSexes}. The other is a \emph{correlated} equilibrium: the players both follow a reliable public signal, such as the random assignment of the better coffee to different locations. Suppose that the two shops are actually mobile carts that are randomly assigned to two locations each day. If each person picks a unique location and goes there day after day, then in the long run, the random assignment process will give them the good coffee equally often \cite{ Aumann74_CorrelativeEquilibria, GintisHelbing15_HomoSocialis}. Note that both fit the traditional definition of a convention according to Lewis \cite{Lewis69_Convention}, since neither convention is inherently preferable to the other, and neither player benefits from changing their behavior once the convention is established.
 
 %In games like the prisoner's dilemma or the stag hunt, the most efficient (i.e. highest collective payoff) outcomes also happen to be fair.  To the contrary, many interesting real-world situations create tension between efficiency and fairness: the most efficient outcome on a given round requires one party to come out of the interaction with a higher payoff than the other, inducing a power dynamic. 
 
@@ -217,7 +217,7 @@ The distinction between these different decision-making environments is not only
 
 \begin{figure}
 \centering
-% \includegraphics[scale=.5]{images/Example_Image}
+%\includegraphics[scale=.5]{images/Fig1}
 \caption{{\bf Screenshot of the first round of the experiment.} The colored triangles represent the players' avatars, the white circles represent targets (labeled by their corresponding payoffs), the outer shell gives the `tie radius,' and the colored cross shows a player their current `destination'}
 \label{ex}
 \end{figure}
@@ -242,7 +242,7 @@ Experiments were performed  using a suite of recent web technologies centered ar
 This manuscript reports experimental data from human subjects. Written informed consent was obtained after the nature and possible consequences of the studies were explained. The research contained in this submission was approved by the Indiana University Institutional Review Board
 
 \subsection*{Participants}
-We recruited 568 participants on Amazon Mechanical Turk, yielding data for 284 dyads, which were spread across the four conditions of our factorial design. We posted 200 HITs for each condition, in separate batches. Because Mechanical Turk workers wish to participate in the experiment at unpredictable rates and times, and two participants had to be present to start a game at the same time, many players accepted \$0.10 for time spent waiting and left the virtual environment before being paired with another player. Hence, we collected uneven sample sizes for each condition.\footnote{Because we used non-parametric statistical methods to obtain our results, these differences did not pose a problem and we did not need to run more dyads.} As with all web experiments, there was nothing to prevent participants from dropping out halfway through the experiment, or simply ignoring the experiment throughout. \nameref{S1_Table} summarizes the number of participants who completed the full set of rounds in each condition, as well as information about how many dropped out or were excluded due to inattention. 
+We recruited 568 participants on Amazon Mechanical Turk, yielding data for 284 dyads, which were spread across the four conditions of our factorial design. We posted 200 HITs for each condition, in separate batches. Because Mechanical Turk workers wish to participate in the experiment at unpredictable rates and times, and two participants had to be present to start a game at the same time, many players accepted \$0.10 for time spent waiting and left the virtual environment before being paired with another player. Hence, we collected uneven sample sizes for each condition. Because we used non-parametric statistical methods to obtain our results, these samples sizes did not pose a problem. As with all web experiments, there was nothing to prevent participants from dropping out halfway through the experiment, or simply ignoring the experiment throughout. \nameref{S1_Table} summarizes the number of participants who completed the full set of rounds in each condition, as well as information about how many dropped out or were excluded due to inattention. 
 
 \subsection*{Procedure}
 Participants were assigned to one of four conditions in a $2\times 2$ experiment design. The real-time (`dynamic') decision-making environment and the simultaneous (`ballistic') environment formed one dimension. The \$0.01 vs. \$0.02 (`low') payoff discrepancy and \$0.01 vs. \$0.04 (`high') payoff discrepancy formed the other dimension. If no other players were waiting to begin a game when a participant entered the environment, they were placed in a waiting room where they could click to navigate around an empty world; if another player was already in the waiting room, a new game was immediately started. In this way, players were automatically paired into dyads. To avoid penalizing participants simply because others failed to join in time, players were eligible to submit their HIT for \$0.10 after completing a pre-test. Whatever amount of money players earned from payoffs in the game was rewarded in real money as a bonus. If the game terminated before completion due to one player dropping out, players were paid whatever they had earned up to that point as a bonus.
@@ -251,23 +251,23 @@ For the `dynamic' condition, players were placed at opposite ends of the virtual
 
 For the `ballistic' condition, all settings were the same, except for the initial stage. Instead of a countdown, players were first asked to click on one of the two targets, with the other player's choice hidden from them. Once both players made a valid selection of one target, no more input was registered and the avatars began moving toward the selected destination at the same rate as the dynamic condition, but without being able to change their courses. Clicks in the vicinity of a target were auto-corrected to the center of the target so that players did not accidentally miss the target. In order to bring total payoffs closer together across all `low' and `high' conditions, players in the `low' condition played 60 rounds, while players in the `high' condition only played 50 rounds. All other settings were held constant across the stakes manipulation. 
 
-The rules governing assignment of payoffs were as follows: around each target (represented by a solid white circle), there was a visible, thin outer ring. If a player reached the inner target while any pixel of the other player's avatar was inside this outer ring, it was counted as a tie and the round ended without awarding either player a payoff. If a player reached the inner target while the other player's avatar was \emph{not} within the ring, they were awarded the amount of money associated with the target, movement stopped, the round ended, and the other player was automatically awarded the amount associated with the other target, regardless of their location. This mechanism prevented a single player from trying to get both payoffs. The players were notified of the amount they earned via a message in the center of the screen saying ``You earned 4\textcent [2\textcent]'' At each step within a round, data on the player's locations, angles, current earnings, and payoff assignments was written to the file. Example play for the ballistic and dynamic conditions are shown in \nameref{S1_Video} and \nameref{S2_Video}, respectively. The data and code used in the following analysis are available online\footnote{\texttt{https://github.com/hawkrobe/socialConventions}}.
+The rules governing assignment of payoffs were as follows: around each target (represented by a solid white circle), there was a visible, thin outer ring. If a player reached the inner target while any pixel of the other player's avatar was inside this outer ring, it was counted as a tie and the round ended without awarding either player a payoff. If a player reached the inner target while the other player's avatar was \emph{not} within the ring, they were awarded the amount of money associated with the target, movement stopped, the round ended, and the other player was automatically awarded the amount associated with the other target, regardless of their location. This mechanism prevented a single player from trying to get both payoffs. The players were notified of the amount they earned via a message in the center of the screen saying ``You earned 4\textcent [2\textcent]'' At each step within a round, data on the player's locations, angles, current earnings, and payoff assignments was written to the file. Example play for the ballistic and dynamic conditions are shown in \nameref{S1_Video} and \nameref{S2_Video}, respectively. The data and code used in the following analysis are available online at \texttt{https://github.com/hawkrobe/socialConventions}.
 
 % Results and Discussion can be combined.
 \section*{Results}
 
 \subsection*{Efficiency and Fairness} Our first major result concerns the efficiency and fairness of strategic interaction. Efficiency is defined as the sum $\rho_1 + \rho_2$, where $\rho_i$ is player $i$'s total payoff. It quantifies the total amount of money the players were collectively able to earn. We divide by the total amount it was \emph{possible} to earn in order to normalize all efficiency scores to the $[0,1]$ interval and compare across conditions with different payoff structures. If a pair of players achieves the maximum efficiency of $1$, they are optimally efficient. Note that there are many different sets of outcomes that achieve the same level of efficiency, some more fair than others.
 
-To distinguish among these different outcomes, we introduce a measure of fairness, defined as the normalized payoff ratio $$\text{Fairness} = \frac{\min(\rho_1', \rho_2')}{\max(\rho_1', \rho_2')}$$ where $\rho_i'$ is the number of rounds that player $i$ earned the higher payoff. This normalization maps the fairness of all conditions to the same $[0,1]$ interval. If one player gets the higher payoff every round, this measure of fairness will be zero; if the players finish the experiment with an equal number of times of earning the high payoff, it will be one\footnote{All of our measures are defined at the level of the dyad, and this is the unit of observation used in all of the following analyses}. 
+To distinguish among these different outcomes, we introduce a measure of fairness, defined as the normalized payoff ratio $$\text{Fairness} = \frac{\min(\rho_1', \rho_2')}{\max(\rho_1', \rho_2')}$$ where $\rho_i'$ is the number of rounds that player $i$ earned the higher payoff. This normalization maps the fairness of all conditions to the same $[0,1]$ interval. If one player gets the higher payoff every round, this measure of fairness will be zero; if the players finish the experiment with an equal number of times of earning the high payoff, it will be one. All of our measures are defined at the level of the dyad, and this is the unit of observation used in all of the following analyses. 
 
 Given that the four distributions of fairness scores featured varying degrees of bimodality and the efficiency scores were similarly non-Gaussian (\nameref{S2_Fig}), we used non-parametric techniques to test the null hypothesis of stochastic equality. For efficiency, a Kruskal-Wallis $H$-test showed a significant difference in the mean ranks of the four different distributions ($H(3) = 30.07, p < .0001$). Post-hoc Mann-Whitney $U$-tests at the Bonferroni corrected $\alpha$ value of .05/4 = .0125 showed that the dynamic conditions, ($M = 0.84, M = 0.84)$, are significantly more efficient than ballistic conditions ($M = 0.69, M = 0.70)$ both within the `high' condition ($U = 1056$, $n_1 = 56$, $n_2 = 69$, $p < .0001$) and the `low' condition ($U = 735$, $n_1 = 52$, $n_2 = 46$, $p < .001$). There was no main effect associated with the payoff manipulation, either at the `dynamic' or `ballistic' levels ($p = .32$ and $p = .47$, respectively; see Fig. \ref{Fig2}a). Given that ties are the sole mechanism through which efficiency can be lowered in the game, a more specific restatement of this result is that ties are significantly more frequent in the ballistic conditions than the dynamic conditions.
 
-\begin{figure*}[t]
+\begin{figure}[t!]
 \centering
-%\includegraphics[scale=.52]{images/Fig2.pdf}
+%\includegraphics[scale=.2]{images/Fig2.pdf}
 \caption{Main results at Binmore's three levels of analysis. Bars reflect standard errors. Note that the results for the two dynamic conditions were the same by efficiency measures (a) and fairness measures (b), yet differed markedly in stability (c). Higher payoff differences increased stability (i.e. decreased surprisal) within the dynamic condition, but had no effect on stability in the ballistic condition. \nameref{S3_Fig} shows the same results using the less interpretable but more technically correct measure of ``mean rank'' on the y-axis.}
 \label{Fig2}
-\end{figure*}
+\end{figure}
 
 Turning to fairness, a Kruskal-Wallis $H$-test showed a significant difference in the mean ranks of the four different distributions ($H(3) = 9.08, p = 0.030$). Post-hoc Mann-Whitney $U$-tests at the Bonferroni corrected level of .05/4 = .0125 showed that the `high' ballistic condition ($M = .51$)  was significantly less fair than both the dynamic `high' ($U = 1378$, $n_1 = 56$, $n_2 = 69$, $p = 0.003$) and 1 v. 2 ($U =953$, $n_1 = 56$, $n_2 = 46$, $p = 0.009$) conditions, both of which had a mean fairness of $0.69$. The fairness scores observed in the `low' ballistic condition ($M = .62$) were not significantly different from the `low' dynamic ($p = 0.198$) or the `high' ballistic ($p = 0.095$) conditions. 
 
@@ -277,7 +277,7 @@ Turning to fairness, a Kruskal-Wallis $H$-test showed a significant difference i
 
 The third property in Binmore's `social contract theory' is \emph{stability}, capturing the regularity of outcomes over multiple games, or more formally, the convergence of strategies to a point attractor. Unlike efficiency and fairness, which are summaries aggregated over all rounds, stability concerns the dynamic patterns of actions from one round to the next, thereby giving insight into how the overall efficiency and fairness was achieved. Intuitively, a strategy is stable if both players' behavior is predictable and persistent. Knowing the outcome of a social interaction at one point in time should reduce one's uncertainty about what will happen at other points in time. We capture this in a graded, quantitative measure using the information-theoretic measure of \emph{surprisal}, which Shannon \cite{Shannon48} defined as the negative logarithm of the probability of an event. In particular, we compute the average surprisal of a Markov Chain encoding the transition probabilities between events on successive rounds. An unlikely event will have low probability and an observer would therefore be highly surprised to see it happen, given knowledge of other events.  This formulation is related to the model of Markov fictitious play introduced by Vanderschraaf and Skryms \cite{VanderschraafSkyrms03_LearningToTakeTurns}, though we only use it as a measure for data analysis rather than a cognitive model of how agents are reasoning about one another within the game (see \nameref{S2_Text} for technical details of the measure). 
 
-The apparent stability of a pattern of events depends upon the encoding used to define events. An obvious choice in our experiment is the outcome -- who, if anyone, received the high payoff on round $t$. This can accurately capture \emph{turn-taking} equilibria, but makes dyads who follow the \emph{correlated} equilibrium appear highly random (though still efficient and fair). Thus, we also use a direction encoding that records whether a given player went to the top or bottom target. This encoding capture correlated equilibria, but makes turn-taking equilibria appear highly random. To be charitable, we computed stability under both encodings and recorded the more stable of the two, biasing all conditions equally toward higher stability. Note that stability is optimized in pairs that perfectly follow one of the two conventions\footnote{Both conventions are point attractors in strategy space, as any divergence from the established conventions would lead to failures of coordination.}, and the measure gradually diverges from optimality when either (1) a convention takes longer for a pair to establish or (2) players attempt to depart from an established convention, creating `hiccups' in the coded string (e.g. ABABAABA).
+The apparent stability of a pattern of events depends upon the encoding used to define events. An obvious choice in our experiment is the outcome -- who, if anyone, received the high payoff on round $t$. This can accurately capture \emph{turn-taking} equilibria, but makes dyads who follow the \emph{correlated} equilibrium appear highly random (though still efficient and fair). Thus, we also use a direction encoding that records whether a given player went to the top or bottom target. This encoding capture correlated equilibria, but makes turn-taking equilibria appear highly random. To be charitable, we computed stability under both encodings and recorded the more stable of the two, biasing all conditions equally toward higher stability. Note that stability is optimized in pairs that perfectly follow one of the two conventions -- both conventions are point attractors in strategy space, as any divergence from the established conventions would lead to failures of coordination -- and the measure gradually diverges from optimality when either (1) a convention takes longer for a pair to establish or (2) players attempt to depart from an established convention, creating `hiccups' in the coded string (e.g. ABABAABA).
 
 First, it is interesting to note that dyads in the ballistic condition have a higher prevalence of adopting a correlated equilibrium convention than those in the dynamic condition, $\chi^2(4) = 17.18, p = 0.002$ (see \nameref{S3_Text} for further details of this analysis). Second, plotting the surprisal distribution, we observe that the high-discrepancy, dynamic condition has strictly higher surprisal values than the ballistic conditions and the low-discrepancy, dynamic condition has strictly lower surprisal values  (see \nameref{S4_Fig}). We formally checked this observation using a Kruskal-Wallis test, which showed that there are differences between the groups ($H(3) = 98.62, p < .0001$). Post-hoc Mann-Whitney tests at the Bonferroni corrected level of .0125 demonstrated that within the `low' condition, the dynamic condition ($M = 0.71$) is significantly less stable than the ballistic condition ($M=0.61$; $p < .0001$) and within the `high' condition, the dynamic condition ($M=0.56$) is significantly more stable than the ballistic condition ($M=0.62$; $p < .0001$). The two dynamic conditions were significantly different from one another ($p < .0001$), but there was no significant difference between the two ballistic conditions ($p = .06$). This interaction, using surprisal as the y axis, is depicted in Fig. \ref{Fig2}c. Note that lower surprisal implies higher stability.
 
@@ -286,12 +286,12 @@ Why is the high payoff difference version of the dynamic condition so much more 
 
 The way peel-off time $t^C_{(i)}$ varies as a function of round number $i$ conveys information about the formation of conventions. High peel-off times indicate a lack of consensus over which player should earn which payoff. Conventions by definition reduce this uncertainty because players conform to their prescribed actions. Regardless of which convention is being chosen (e.g. turn-taking, public signal based on location, pure dominance by one player), peel-off times are predicted to decrease as the convention is adopted. Fig. \ref{Fig3}(a) shows the average peel-off time for each round, smoothed using non-parametric local regression (lowess). 
 
-\begin{figure*}[t]
+\begin{figure}[t]
 \centering
-% \includegraphics[scale=.45]{images/Fig3.pdf}
+% \includegraphics[scale=.38]{images/Fig3.pdf}
 \caption{(a) Non-parametric local regression curve fitting peel-off times on each trial, broken down by `high' and `low' payoff conditions. Envelopes surrounding curves denote $\pm 1$ (bootstrapped) standard deviation. Note that as conventions form, we predict a decrease in peel-off times, because there is a pre-determined action for both players to take in a given round. (b) Interaction plot comparing the mean peel-off time at the beginning of the experiment against mean peel-off times at the end (with intervals indicated by the arrows in (a)). We find a crossover effect, with the `high' payoff condition beginning with higher peel-off times and ending with lower peel-off times. \nameref{S2_Table} demonstrates the robustness of this effect to different windows.}
 \label{Fig3}
-\end{figure*}
+\end{figure}
 
 Note that the curve for the `high' condition starts with higher peel-off times than the curve for the `low' condition, and then by 1/3 of the way through the experiment has obtained lower conflict. In other words, higher initial conflict resulted in a quicker and longer-lasting adoption of conventions. Note also that the `low' curve shows an uptick in conflict (i.e. a horizon effect) for the final several turns of the game, while the `high' curve does not. We focus now on the first of these observations. To make the comparison rigorous, we conduct statistical tests directly on the data in the time intervals of interest, rather than smoothed curves.
 
@@ -415,7 +415,7 @@ Garrod S, Anderson A.
 Caldwell CA, Smith K.
 \newblock Cultural evolution and perpetuation of arbitrary communicative
   conventions in experimental microsocieties.
-\newblock PloS one. 2012;7(8):e43807.
+\newblock PLOS ONE. 2012;7(8):e43807.
 
 \bibitem{CentolaBaronchelli15_ConventionEmergence}
 Centola D, Baronchelli A.
@@ -433,7 +433,7 @@ Lewis D.
 Helbing D, Buzna L, Johansson A, Werner T.
 \newblock Self-organized pedestrian crowd dynamics: Experiments, simulations,
   and design solutions.
-\newblock Transportation science. 2005;39(1):1--24.
+\newblock Transportation Science. 2005;39(1):1--24.
 
 \bibitem{VanderschraafSkyrms03_LearningToTakeTurns}
 Vanderschraaf P, Skyrms B.
@@ -455,12 +455,12 @@ Lau SHP, Mui VL.
 \bibitem{Aumann74_CorrelativeEquilibria}
 Aumann RJ.
 \newblock Subjectivity and correlation in randomized strategies.
-\newblock Journal of mathematical Economics. 1974;1(1):67--96.
+\newblock Journal of Mathematical Economics. 1974;1(1):67--96.
 
-\bibitem{GintisHelbing13_HomoSocialis}
+\bibitem{GintisHelbing15_HomoSocialis}
 Gintis H, Helbing D.
 \newblock Homo socialis: An analytical core for sociological theory.
-\newblock Available at SSRN 2362262. 2013;.
+\newblock Review of Behavioral Economics. 2015;2:1--59.
 
 \bibitem{VonNeumannMorgenstern07_TheoryOfGames}
 Von~Neumann J, Morgenstern O.
@@ -470,7 +470,7 @@ Von~Neumann J, Morgenstern O.
 \bibitem{Kreps90}
 Kreps DM.
 \newblock Game theory and economic modelling.
-\newblock Clarendon lectures in economics. Clarendon Press; 1990.
+\newblock Clarendon Lectures in Economics. Clarendon Press; 1990.
 
 \bibitem{Rasmusen06}
 Rasmusen E.
@@ -490,7 +490,7 @@ Friedman D, Oprea R.
 \bibitem{vanDoornRiebliTaborsky14_CoactionReciprocityContinuousTime}
 van Doorn GS, Riebli T, Taborsky M.
 \newblock Coaction versus reciprocity in continuous-time models of cooperation.
-\newblock Journal of theoretical biology. 2014;356:1--10.
+\newblock Journal of Theoretical Biology. 2014;356:1--10.
 
 \bibitem{JacksonXing14_CultureDependentStrategies}
 Jackson MO, Xing Y.
@@ -501,7 +501,7 @@ Jackson MO, Xing Y.
 \bibitem{FreyGoldstone13_CyclicGameDynamics}
 Frey S, Goldstone RL.
 \newblock Cyclic game dynamics driven by iterated reasoning.
-\newblock PloS one. 2013;8(2):e56416.
+\newblock PLOS ONE. 2013;8(2):e56416.
 
 \bibitem{BrennanClark96_ConceptualPactsConversation}
 Brennan SE, Clark HH.
@@ -538,7 +538,7 @@ Waddington CH.
 \bibitem{HintonNowlan87_LearningGuidesEvolution}
 Hinton GE, Nowlan SJ.
 \newblock How learning can guide evolution.
-\newblock Complex systems. 1987;1(3):495--502.
+\newblock Complex Systems. 1987;1(3):495--502.
 
 \bibitem{OpreaHenwoodFriedman11_HawksDoves}
 Oprea R, Henwood K, Friedman D.
@@ -587,7 +587,7 @@ Koop GJ, Johnson JG.
 \bibitem{Beer00}
 Beer RD.
 \newblock Dynamical approaches to cognitive science.
-\newblock Trends in cognitive sciences. 2000;4(3):91--99.
+\newblock Trends in Cognitive Sciences. 2000;4(3):91--99.
 
 \end{thebibliography}
 
